

syntax = "proto3";
package Bizdemo;

option go_package = "./";

// import "mond/wind/proto/plugin/plugin.proto";

message Nil{}

message PingReq {
  string name = 1;
  int32 age=2;
  string x=3;
  double dx=6;
}

message PingResp {
  string message = 1;
  int32 x=2;
  string y=3;
  float z=4;
  double a=5;
}

service BizdemoService {
  rpc Ping (PingReq) returns (PingResp) {}
}
